VQ-2516/Admin service requests API consumption

--- a/src/assets/i18n/cn.json
+++ b/src/assets/i18n/cn.json
@@ -180,6 +180,7 @@
     "Client Attributes": "客户属性",
     "Product Attributes": "产品属性",
     "quick_quote": "快速报价",
+    "quote": "报价",
     "service_requests": "服务请求",
     "downloads": "下载",
     "Activity Management": "活动管理",
