--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -180,6 +180,7 @@
     "Client Attributes": "Kundenattribute",
     "Product Attributes": "Produktattribute",
     "quick_quote": "Schnellangebot",
+    "quote": "Angebot",
     "service_requests": "Serviceanfragen",
     "downloads": "Downloads",
     "Activity Management": "Aktivitätsverwaltung",
