--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -180,6 +180,7 @@
     "Client Attributes": "Attributs du Client",
     "Product Attributes": "Attributs du Produit",
     "quick_quote": "Devis rapide",
+    "quote": "Devis",
     "service_requests": "Demandes de service",
     "downloads": "Téléchargements",
     "Activity Management": "Gestion des Activités",
@@ -1041,69 +1042,137 @@
     "grp": {
       "claims": {
         "claim_initiation": "Début de la réclamation",
-      "select_a_product": "Sélectionner un produit",
-      "select_a_policy": "Sélectionner une police",
-      "select_a_policy_member": "Sélectionner un membre de la police",
-      "select_a_causation_type": "Sélectionner un type de causation",
-      "select_the_actual_cause": "Sélectionner la cause réelle",
-      "select_an_option": "Sélectionner une option",
-      "add_causation": "Ajouter une causation",
-      "causation_id": "ID de causation",
-      "causation_description": "Description de la causation",
-      "gender": "Genre",
-      "male": "Homme",
-      "female": "Femme",
-      "both": "Les deux",
-      "minimum_claimable_months": "Nombre minimum de mois réclamables",
-      "add_actual_type": "Ajouter un type réel",
-      "claim_report_date": "Date du rapport de réclamation",
-      "incident_occurrence_date": "Date de survenue de l'incident",
-      "location_of_incident": "Lieu de l'incident",
-      "upload_documents": "Télécharger des documents",
-      "book_claim": "Réserver une réclamation",
-      "claim_information": "Informations sur la réclamation",
-      "product": "Produit",
-      "cause_type": "Type de cause",
-      "incident_location": "Lieu de l'incident",
-      "policy": "Police",
-      "causation_cause": "Cause de la causalité",
-      "policy_member": "Membre de la police",
-      "death_date": "Date de décès",
-      "documents": "Documents",
-      "admit_claim": "Admettre la réclamation",
-      "acknowledgement_letter": "Lettre d'accusé de réception",
-      "share": "Partager",
-      "process_claim": "Traiter la réclamation",
-      "acknowledgement_details": "Détails de l'accusé de réception",
-      "actual_cause": "Cause réelle",
-      "claim_initialization_date": "Date d'initialisation de la réclamation",
-      "share_acknowledgement_letter": "Partager la lettre d'accusé de réception",
-      "select_sharing_method": "Sélectionner le mode de partage",
-      "email": "Email",
-      "sms": "SMS",
-      "whatsapp": "Whatsapp",
-      "enter_email_address": "Saisir l'adresse email",
-      "enter_phone_number": "Saisir le numéro de téléphone",
-      "enter_whatsapp_number": "Saisir le numéro Whatsapp",
-      "choose_file": "Choisir un fichier",
-      "investigator": "Enquêteur",
-      "request_date": "Date de demande",
-      "submission_date": "Date de soumission",
-      "remarks": "Remarques",
-      "upload_investigators_report": "Télécharger le rapport de l'enquêteur",
-      "investigation_details": "Détails de l'enquête",
-      "payment_details": "Détails du paiement",
-      "invoice_number": "Numéro de facture",
-      "invoice_date": "Date de la facture",
-      "invoice_amount": "Montant de la facture",
-      "payment_mode": "Mode de paiement",
-      "account_number": "Numéro de compte",
-      "approve_and_proceed": "Approuver et continuer",
-      "payment_voucher_processing": "Traitement du bon de paiement",
-      "payee": "Bénéficiaire",
-      "amount": "Montant",
-      "reject": "Rejeter",
-      "send_for_review": "Envoyer pour révision"
+        "select_a_product": "Sélectionner un produit",
+        "select_a_policy": "Sélectionner une police",
+        "select_a_policy_member": "Sélectionner un membre de la police",
+        "select_a_causation_type": "Sélectionner un type de causation",
+        "select_the_actual_cause": "Sélectionner la cause réelle",
+        "select_an_option": "Sélectionner une option",
+        "add_causation": "Ajouter une causation",
+        "causation_id": "ID de causation",
+        "causation_description": "Description de la causation",
+        "gender": "Genre",
+        "male": "Homme",
+        "female": "Femme",
+        "both": "Les deux",
+        "minimum_claimable_months": "Nombre minimum de mois réclamables",
+        "add_actual_type": "Ajouter un type réel",
+        "claim_report_date": "Date du rapport de réclamation",
+        "incident_occurrence_date": "Date de survenue de l'incident",
+        "location_of_incident": "Lieu de l'incident",
+        "upload_documents": "Télécharger des documents",
+        "book_claim": "Réserver une réclamation",
+        "claim_information": "Informations sur la réclamation",
+        "product": "Produit",
+        "cause_type": "Type de cause",
+        "incident_location": "Lieu de l'incident",
+        "policy": "Police",
+        "causation_cause": "Cause de la causalité",
+        "policy_member": "Membre de la police",
+        "death_date": "Date de décès",
+        "documents": "Documents",
+        "admit_claim": "Admettre la réclamation",
+        "acknowledgement_letter": "Lettre d'accusé de réception",
+        "share": "Partager",
+        "process_claim": "Traiter la réclamation",
+        "acknowledgement_details": "Détails de l'accusé de réception",
+        "actual_cause": "Cause réelle",
+        "claim_initialization_date": "Date d'initialisation de la réclamation",
+        "share_acknowledgement_letter": "Partager la lettre d'accusé de réception",
+        "select_sharing_method": "Sélectionner le mode de partage",
+        "email": "Email",
+        "sms": "SMS",
+        "whatsapp": "Whatsapp",
+        "enter_email_address": "Saisir l'adresse email",
+        "enter_phone_number": "Saisir le numéro de téléphone",
+        "enter_whatsapp_number": "Saisir le numéro Whatsapp",
+        "choose_file": "Choisir un fichier",
+        "investigator": "Enquêteur",
+        "request_date": "Date de demande",
+        "submission_date": "Date de soumission",
+        "remarks": "Remarques",
+        "upload_investigators_report": "Télécharger le rapport de l'enquêteur",
+        "investigation_details": "Détails de l'enquête",
+        "payment_details": "Détails du paiement",
+        "invoice_number": "Numéro de facture",
+        "invoice_date": "Date de la facture",
+        "invoice_amount": "Montant de la facture",
+        "payment_mode": "Mode de paiement",
+        "account_number": "Numéro de compte",
+        "approve_and_proceed": "Approuver et continuer",
+        "payment_voucher_processing": "Traitement du bon de paiement",
+        "payee": "Bénéficiaire",
+        "amount": "Montant",
+        "reject": "Rejeter",
+        "send_for_review": "Envoyer pour révision"
+      },
+      "service_request": {
+        "admin": {
+          "dashboard": {
+            "service_requests_dashboard": "Tableau de bord des demandes de service",
+            "new_service_request": "Nouvelle demande de service",
+            "request_id": "ID de la demande",
+            "category": "Catégorie",
+            "category_type": "Type de catégorie",
+            "status": "Statut",
+            "date_submitted": "Date de soumission",
+            "policy_number": "Numéro de police",
+            "assigned_to": "Assigné à"
+          },
+          "service_req": {
+            "service_request": "Demande de service",
+            "category": "Catégorie",
+            "category_type": "Type de catégorie",
+            "policy": "Police",
+            "policy_members": "Membres de la police",
+            "preferred_contact_method": "Méthode de contact préférée",
+            "preferred_contact_time": "Heure de contact préférée",
+            "description": "Description",
+            "documents": "Documents",
+            "upload_file": "Télécharger le fichier",
+            "choose_file": "Choisir un fichier",
+            "submit_request": "Soumettre la demande"
+          },
+          "logs": {
+            "service_request_logs": "Journaux des demandes de service",
+            "request_number": "Numéro de la demande",
+            "request_status": "Statut de la demande",
+            "request_date": "Date de la demande",
+            "policy": "Police",
+            "category_type": "Type de catégorie",
+            "policy_member": "Membre de la police",
+            "category": "Catégorie",
+            "policy_number": "Numéro de police",
+            "days_lapsed": "Jours écoulés",
+            "notifications": "Notifications",
+            "new_message": "Nouveau message",
+            "attach_file": "Joindre un fichier",
+            "submit": "Soumettre"
+          }
+        },
+        "member": {
+          "my_service_requests": "Mes demandes de service",
+          "new_request": "Nouvelle demande",
+          "request_number": "Numéro de la demande",
+          "category": "Catégorie",
+          "summary": "Résumé",
+          "date": "Date",
+          "status": "Statut",
+          "due_date": "Date d'échéance",
+          "lapsed_date": "Date écoulée",
+          "service_request_summary": "Résumé de la demande de service",
+          "category_type": "Type de catégorie",
+          "policy": "Police",
+          "policy_members": "Membres de la police",
+          "description": "Description",
+          "service_request": "Demande de service",
+          "preferred_contact_method": "Méthode de contact préférée",
+          "preferred_contact_time": "Heure de contact préférée",
+          "invoice_number": "Numéro de facture",
+          "upload_file": "Télécharger le fichier",
+          "choose_file": "Choisir un fichier",
+          "submit": "Soumettre"
+        }
       }
     }
   },
