--- a/src/assets/i18n/ke.json
+++ b/src/assets/i18n/ke.json
@@ -180,6 +180,7 @@
     "Client Attributes": "Sifa za Mteja",
     "Product Attributes": "Sifa za Bidhaa",
     "quick_quote": "Nukuu ya haraka",
+    "quote": "Kielelezo cha bei",
     "service_requests": "Maombi ya huduma",
     "downloads": "Vipakuliwa",
     "Activity Management": "Usimamizi wa Shughuli",
