--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -180,6 +180,7 @@
     "Client Attributes": "Atributos del Cliente",
     "Product Attributes": "Atributos del Producto",
     "quick_quote": "Cotización rápida",
+    "quote": "Presupuesto",
     "service_requests": "Solicitudes de servicio",
     "downloads": "Descargas",
     "Activity Management": "Gestión de Actividades",
@@ -1041,69 +1042,137 @@
     "grp": {
       "claims": {
         "claim_initiation": "Inicio de reclamación",
-      "select_a_product": "Seleccionar un producto",
-      "select_a_policy": "Seleccionar una póliza",
-      "select_a_policy_member": "Seleccionar un miembro de la póliza",
-      "select_a_causation_type": "Seleccionar un tipo de causación",
-      "select_the_actual_cause": "Seleccionar la causa real",
-      "select_an_option": "Seleccionar una opción",
-      "add_causation": "Añadir causación",
-      "causation_id": "ID de causación",
-      "causation_description": "Descripción de la causación",
-      "gender": "Género",
-      "male": "Masculino",
-      "female": "Femenino",
-      "both": "Ambos",
-      "minimum_claimable_months": "Meses mínimos reclamables",
-      "add_actual_type": "Añadir tipo real",
-      "claim_report_date": "Fecha del informe de reclamación",
-      "incident_occurrence_date": "Fecha de ocurrencia del incidente",
-      "location_of_incident": "Ubicación del incidente",
-      "upload_documents": "Subir documentos",
-      "book_claim": "Reservar reclamación",
-      "claim_information": "Información de la reclamación",
-      "product": "Producto",
-      "cause_type": "Tipo de causa",
-      "incident_location": "Ubicación del incidente",
-      "policy": "Póliza",
-      "causation_cause": "Causa de la causa",
-      "policy_member": "Miembro de la póliza",
-      "death_date": "Fecha de fallecimiento",
-      "documents": "Documentos",
-      "admit_claim": "Aceptar reclamación",
-      "acknowledgement_letter": "Carta de acuse de recibo",
-      "share": "Compartir",
-      "process_claim": "Procesar reclamación",
-      "acknowledgement_details": "Detalles del acuse de recibo",
-      "actual_cause": "Causa real",
-      "claim_initialization_date": "Fecha de inicio de la reclamación",
-      "share_acknowledgement_letter": "Compartir carta de acuse de recibo",
-      "select_sharing_method": "Seleccionar método de compartición",
-      "email": "Correo electrónico",
-      "sms": "SMS",
-      "whatsapp": "Whatsapp",
-      "enter_email_address": "Ingresar dirección de correo electrónico",
-      "enter_phone_number": "Ingresar número de teléfono",
-      "enter_whatsapp_number": "Ingresar número de Whatsapp",
-      "choose_file": "Seleccionar archivo",
-      "investigator": "Investigador",
-      "request_date": "Fecha de solicitud",
-      "submission_date": "Fecha de envío",
-      "remarks": "Observaciones",
-      "upload_investigators_report": "Subir el informe del investigador",
-      "investigation_details": "Detalles de la investigación",
-      "payment_details": "Detalles de pago",
-      "invoice_number": "Número de factura",
-      "invoice_date": "Fecha de la factura",
-      "invoice_amount": "Monto de la factura",
-      "payment_mode": "Modo de pago",
-      "account_number": "Número de cuenta",
-      "approve_and_proceed": "Aprobar y continuar",
-      "payment_voucher_processing": "Procesamiento del comprobante de pago",
-      "payee": "Beneficiario",
-      "amount": "Monto",
-      "reject": "Rechazar",
-      "send_for_review": "Enviar para revisión"
+        "select_a_product": "Seleccionar un producto",
+        "select_a_policy": "Seleccionar una póliza",
+        "select_a_policy_member": "Seleccionar un miembro de la póliza",
+        "select_a_causation_type": "Seleccionar un tipo de causación",
+        "select_the_actual_cause": "Seleccionar la causa real",
+        "select_an_option": "Seleccionar una opción",
+        "add_causation": "Añadir causación",
+        "causation_id": "ID de causación",
+        "causation_description": "Descripción de la causación",
+        "gender": "Género",
+        "male": "Masculino",
+        "female": "Femenino",
+        "both": "Ambos",
+        "minimum_claimable_months": "Meses mínimos reclamables",
+        "add_actual_type": "Añadir tipo real",
+        "claim_report_date": "Fecha del informe de reclamación",
+        "incident_occurrence_date": "Fecha de ocurrencia del incidente",
+        "location_of_incident": "Ubicación del incidente",
+        "upload_documents": "Subir documentos",
+        "book_claim": "Reservar reclamación",
+        "claim_information": "Información de la reclamación",
+        "product": "Producto",
+        "cause_type": "Tipo de causa",
+        "incident_location": "Ubicación del incidente",
+        "policy": "Póliza",
+        "causation_cause": "Causa de la causa",
+        "policy_member": "Miembro de la póliza",
+        "death_date": "Fecha de fallecimiento",
+        "documents": "Documentos",
+        "admit_claim": "Aceptar reclamación",
+        "acknowledgement_letter": "Carta de acuse de recibo",
+        "share": "Compartir",
+        "process_claim": "Procesar reclamación",
+        "acknowledgement_details": "Detalles del acuse de recibo",
+        "actual_cause": "Causa real",
+        "claim_initialization_date": "Fecha de inicio de la reclamación",
+        "share_acknowledgement_letter": "Compartir carta de acuse de recibo",
+        "select_sharing_method": "Seleccionar método de compartición",
+        "email": "Correo electrónico",
+        "sms": "SMS",
+        "whatsapp": "Whatsapp",
+        "enter_email_address": "Ingresar dirección de correo electrónico",
+        "enter_phone_number": "Ingresar número de teléfono",
+        "enter_whatsapp_number": "Ingresar número de Whatsapp",
+        "choose_file": "Seleccionar archivo",
+        "investigator": "Investigador",
+        "request_date": "Fecha de solicitud",
+        "submission_date": "Fecha de envío",
+        "remarks": "Observaciones",
+        "upload_investigators_report": "Subir el informe del investigador",
+        "investigation_details": "Detalles de la investigación",
+        "payment_details": "Detalles de pago",
+        "invoice_number": "Número de factura",
+        "invoice_date": "Fecha de la factura",
+        "invoice_amount": "Monto de la factura",
+        "payment_mode": "Modo de pago",
+        "account_number": "Número de cuenta",
+        "approve_and_proceed": "Aprobar y continuar",
+        "payment_voucher_processing": "Procesamiento del comprobante de pago",
+        "payee": "Beneficiario",
+        "amount": "Monto",
+        "reject": "Rechazar",
+        "send_for_review": "Enviar para revisión"
+      },
+      "service_request": {
+        "admin": {
+          "dashboard": {
+            "service_requests_dashboard": "Panel de solicitudes de servicio",
+            "new_service_request": "Nueva solicitud de servicio",
+            "request_id": "ID de solicitud",
+            "category": "Categoría",
+            "category_type": "Tipo de categoría",
+            "status": "Estado",
+            "date_submitted": "Fecha de envío",
+            "policy_number": "Número de póliza",
+            "assigned_to": "Asignado a"
+          },
+          "service_req": {
+            "service_request": "Solicitud de servicio",
+            "category": "Categoría",
+            "category_type": "Tipo de categoría",
+            "policy": "Póliza",
+            "policy_members": "Miembros de la póliza",
+            "preferred_contact_method": "Método de contacto preferido",
+            "preferred_contact_time": "Hora de contacto preferida",
+            "description": "Descripción",
+            "documents": "Documentos",
+            "upload_file": "Subir archivo",
+            "choose_file": "Elegir archivo",
+            "submit_request": "Enviar solicitud"
+          },
+          "logs": {
+            "service_request_logs": "Registros de solicitudes de servicio",
+            "request_number": "Número de solicitud",
+            "request_status": "Estado de la solicitud",
+            "request_date": "Fecha de solicitud",
+            "policy": "Póliza",
+            "category_type": "Tipo de categoría",
+            "policy_member": "Miembro de la póliza",
+            "category": "Categoría",
+            "policy_number": "Número de póliza",
+            "days_lapsed": "Días transcurridos",
+            "notifications": "Notificaciones",
+            "new_message": "Nuevo mensaje",
+            "attach_file": "Adjuntar archivo",
+            "submit": "Enviar"
+          }
+        },
+        "member": {
+          "my_service_requests": "Mis solicitudes de servicio",
+          "new_request": "Nueva solicitud",
+          "request_number": "Número de solicitud",
+          "category": "Categoría",
+          "summary": "Resumen",
+          "date": "Fecha",
+          "status": "Estado",
+          "due_date": "Fecha de vencimiento",
+          "lapsed_date": "Fecha transcurrida",
+          "service_request_summary": "Resumen de solicitud de servicio",
+          "category_type": "Tipo de categoría",
+          "policy": "Póliza",
+          "policy_members": "Miembros de la póliza",
+          "description": "Descripción",
+          "service_request": "Solicitud de servicio",
+          "preferred_contact_method": "Método de contacto preferido",
+          "preferred_contact_time": "Hora de contacto preferida",
+          "invoice_number": "Número de factura",
+          "upload_file": "Subir archivo",
+          "choose_file": "Elegir archivo",
+          "submit": "Enviar"
+        }
       }
     }
   },
