VQ-2781:: CRM Landing Page Layout n Menu Service Modification

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -121,6 +121,12 @@
     "Business Account": "Business Account",
     "Organization Setups": "Organization Setups",
     "Organization": "Organization",
+    "Organogram": "Organogram",
+    "Account Management": "Account Management",
+    "User Parameters": "User Parameters",
+    "Administration": "Administration",
+    "Messaging": "Messaging",
+    "System Reports": "System Reports",
     "Countries": "Countries",
     "Org Parameters": "Org Parameters",
     "Currencies & Currency Rates": "Currencies & Currency Rates",
@@ -760,7 +766,7 @@
       "mid_term_endorsement": "Mid-term endorsements",
       "is_the_policy_short_period": "Is the policy short period",
       "is_the_policy_renewable": "Is the policy renewable",
-      "other_insterested_parties":"Other interested parties",
+      "other_insterested_parties": "Other interested parties",
       "is_it_a_new_client": "Is it a new Client",
       "cancel": "Cancel",
       "next": "Next",
@@ -1000,10 +1006,10 @@
       "edit_required_documents": "Edit required documents",
       "certificates": "Certificates",
       "select_user_certifacte_iot": "Select user certificate lot",
-      "cert_no":"Cert no",
+      "cert_no": "Cert no",
       "lot_id": "Lot ID ",
       "issue_date": "Issue date",
-      "cert_year" : "Cert year",
+      "cert_year": "Cert year",
       "status": "Status",
       "print_status": "Print status",
       "print_date": "Print date",
@@ -1014,25 +1020,25 @@
       "certificate_details": " Certificate details ",
       "certificate": " Certificate ",
       "active": "Active",
-      "cancelled":"Cancelled",
+      "cancelled": "Cancelled",
       "inactive": "Inactive",
       "wet": "WET",
       "remark": "Remark",
       "created_date": "Created date",
-      "add_remarks":"Add Remarks",
+      "add_remarks": "Add Remarks",
       "edit_remarks": "Edit Remarks",
       "related_risks": "Related risks",
       "property_id": "Property ID",
       "commission_transaction": "Commission transaction ",
       "agent_name": "Agent name",
-      "account_type":"Account type",
-      "setup_rate":"Setup rate",
+      "account_type": "Account type",
+      "setup_rate": "Setup rate",
       "used_rate": "Used rate",
       "commission_amount": "Commission amount",
       "withholding_rate": "Withholding rate",
       "code": "Code",
-      "select_risk_peril":"Select Risk Peril",
-      "risk_service_list":"Risk Service List" 
+      "select_risk_peril": "Select Risk Peril",
+      "risk_service_list": "Risk Service List"
     }
   },
   "lms": {
