VQ-2781:: CRM Landing Page Layout n Menu Service Modification

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -127,6 +127,12 @@
     "Administration": "Administration",
     "Messaging": "Messaging",
     "System Reports": "System Reports",
+    "System Roles": "System Roles",
+    "Scheduler": "Scheduler",
+    "Message Template": "Message Template",
+    "Messages History": "Messages History",
+    "Payment Modes": "Payment Modes",
+    "Reports": "Reports",
     "Countries": "Countries",
     "Org Parameters": "Org Parameters",
     "Currencies & Currency Rates": "Currencies & Currency Rates",
