VQ-2756/Get claim policies, info, covers, update covers API consumption

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1163,7 +1163,34 @@
         "assign_supervisor": "Assign supervisor",
         "send_for_supervisor_approval": "Send for Supevisor approval",
         "supervisor_approval": "Supervisor approval",
-        "authorize_voucher": "Authorize voucher"
+        "authorize_voucher": "Authorize voucher",
+        "claimable_amount": "Claimable amount",
+        "but_pay_amount": "But pay amount",
+        "reason": "Reason",
+        "policy_details": "Policy details",
+        "policy_number": "Policy number",
+        "effective_date": "Effective date",
+        "branch": "Branch",
+        "group_name": "Group name",
+        "with_effect_to": "With effect to",
+        "inception_date": "Inception date",
+        "claim_number": "Claim number",
+        "causation_type": "Causation type",
+        "claimed_amount": "Claimed amount",
+        "member_name": "Member name",
+        "initiator": "Initiator",
+        "reserve_amount": "Reserve amount",
+        "member_number": "Member number",
+        "claim_status": "Claim status",
+        "but_pay_reason": "But pay reason",
+        "age": "Age",
+        "cover_types": "Cover types",
+        "sum_assured": "Sum assured",
+        "reserved_amount": "Reserved amount",
+        "investigate_claim": "Investigate claim",
+        "proceed_without_investigation": "Proceed without investigation",
+        "submit": "Submit"
+        
       },
       "service_request": {
         "admin": {
