--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -1121,7 +1121,33 @@
         "assign_supervisor": "Asignar supervisor",
         "send_for_supervisor_approval": "Enviar para aprobación del supervisor",
         "supervisor_approval": "Aprobación del supervisor",
-        "authorize_voucher": "Autorizar vale"
+        "authorize_voucher": "Autorizar vale",
+        "claimable_amount": "Monto reclamable",
+        "but_pay_amount": "Pero pagar el monto",
+        "reason": "Razón",
+        "policy_details": "Detalles de la póliza",
+        "policy_number": "Número de póliza",
+        "effective_date": "Fecha de vigencia",
+        "branch": "Sucursal",
+        "group_name": "Nombre del grupo",
+        "with_effect_to": "Con efecto a",
+        "inception_date": "Fecha de inicio",
+        "claim_number": "Número de reclamo",
+        "causation_type": "Tipo de causalidad",
+        "claimed_amount": "Monto reclamado",
+        "member_name": "Nombre del miembro",
+        "initiator": "Iniciador",
+        "reserve_amount": "Monto reservado",
+        "member_number": "Número de miembro",
+        "claim_status": "Estado del reclamo",
+        "but_pay_reason": "Pero razón de pago",
+        "age": "Edad",
+        "cover_types": "Tipos de cobertura",
+        "sum_assured": "Suma asegurada",
+        "reserved_amount": "Monto reservado",
+        "investigate_claim": "Investigar reclamo",
+        "proceed_without_investigation": "Proceder sin investigación",
+        "submit": "Enviar"
       },
       "service_request": {
         "admin": {
