--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1121,7 +1121,33 @@
         "assign_supervisor": "Assigner un superviseur",
         "send_for_supervisor_approval": "Envoyer pour approbation du superviseur",
         "supervisor_approval": "Approbation du superviseur",
-        "authorize_voucher": "Autoriser le bon"
+        "authorize_voucher": "Autoriser le bon",
+        "claimable_amount": "Montant réclamable",
+        "but_pay_amount": "Mais payer le montant",
+        "reason": "Raison",
+        "policy_details": "Détails de la police",
+        "policy_number": "Numéro de police",
+        "effective_date": "Date d'effet",
+        "branch": "Agence",
+        "group_name": "Nom du groupe",
+        "with_effect_to": "Avec effet à",
+        "inception_date": "Date de début",
+        "claim_number": "Numéro de réclamation",
+        "causation_type": "Type de causalité",
+        "claimed_amount": "Montant réclamé",
+        "member_name": "Nom du membre",
+        "initiator": "Initiateur",
+        "reserve_amount": "Montant réservé",
+        "member_number": "Numéro de membre",
+        "claim_status": "Statut de la réclamation",
+        "but_pay_reason": "Mais raison de paiement",
+        "age": "Âge",
+        "cover_types": "Types de couverture",
+        "sum_assured": "Somme assurée",
+        "reserved_amount": "Montant réservé",
+        "investigate_claim": "Enquêter sur la réclamation",
+        "proceed_without_investigation": "Procéder sans enquête",
+        "submit": "Soumettre"
       },
       "service_request": {
         "admin": {
