--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1043,8 +1043,9 @@
       "commission_amount": "Commission amount",
       "withholding_rate": "Withholding rate",
       "code": "Code",
-      "select_risk_peril": "Select Risk Peril",
-      "risk_service_list": "Risk Service List"
+      "select_risk_peril":"Select Risk Peril",
+      "risk_service_list":"Risk Service List",
+      "reassign": "Reassign"
     }
   },
   "lms": {
