VQ-2863/Update UI on Claim initialization and admission screen

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1190,7 +1190,8 @@
         "reserved_amount": "Reserved amount",
         "investigate_claim": "Investigate claim",
         "proceed_without_investigation": "Proceed without investigation",
-        "submit": "Submit"
+        "submit": "Submit",
+        "completed": "Completed"
         
       },
       "service_request": {
